# GLLearner

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Camera.cpp  Camera.h  EventHandle.h  Framework.h  GLLearner.vcxproj  GLLearner.vcxproj.filters  ImguiManager.cpp  ImguiManager.h  LICENSE  Logger.cpp  Logger.h  Note  README.md  Scene.cpp  Scene.h  Singleton.h  main.cpp  shaderLoader.cpp  shaderLoader.h  text.txt
Testcase/GLM/GLM/: BX_Transform.h  GLM.sln  GLM.vcxproj  GLM.vcxproj.filters  GLM_Transform.cpp  GLM_Transform.h  StringMatrix.h  TestCase.cpp  TestCase.h  main.cpp
aaaaaa/cmake example/: CMakeLists.txt
aaaaaa/ss/: CMakeLists.txt  GLLearner.sln  GLLearner.vcxproj
aaaaaa/ss/assets/shader/: fs_cube_on_light.glsl  vs_texture.glsl
aaaaaa/ss/cmake/: Functions.cmake
aaaaaa/ss/gui/: GUIManager.h  Gui.cpp
aaaaaa/ss/include/gui/: CameraPanel.h  Gui.h
aaaaaa/ss/include/logger/: Logger.h
aaaaaa/ss/include/tools/: TextureLoader.h
aaaaaa/ss/src/: main.cpp
aaaaaa/ss/src/gui/: GUIManager.cpp
aaaaaa/ss/src/logger/: Logger.cpp
aaaaaa/ss/src/math/: PMath.cpp
aaaaaa/ss/src/scene/: Scene.cpp
aaaaaa/ss/src/tools/: TextureLoader.cpp  shaderLoader.cpp
aaaaaa/ss/src/utilities/: Clock.cpp
aaaaaa/ss/testcase/GLM/: TestCase.h
assets/shader/: fs1.glsl  fs_cube_on_light.glsl  fs_light_map.glsl  fs_raw.glsl  light_map.fs  vs.glsl  vs_texture.glsl
cmake/: Functions.cmake
gui/: CameraPanel.cpp  GuiLogger.h  GuiPanel.h
include/: Config.h  RenderCoreDefine.h
include/camera/: Camera.h
include/geometry/basic_geometry/: BasicGeometry.h
include/gui/: CameraPanel.h  GUIManager.h  Gui.h  GuiLogger.h
include/light/: BasicLight.h  Light.h
include/logger/: Logger.h
include/math/: PMath.h
include/scene/: Mesh.h  Model.h  Scene.h  Texture.h  Vertex.h
include/shader/: Shader.h
include/testCases/: BlendingCase.h  OffScreenRenderCase.h  StencilTestingCase.h  TestCase.h
include/tools/: TextureLoader.h  shaderLoader.h
include/utilities/: Clock.h  Exception.h  GLResourceAllocator.h  Singleton.h  StringTable.h
scripts/: Clean~do_this_after_git_add~.bat  build_out_of_source.bat
shader/: fs.glsl  fs_cube_on_light.glsl  fs_texture.glsl  vs.glsl  vs_raw.glsl
src/: main.cpp
src/camera/: Camera.cpp
src/gui/: CameraPanel.cpp  GUIManager.cpp  Gui.cpp  GuiLogger.cpp
src/light/: BasicLight.cpp
src/logger/: Logger.cpp
src/math/: PMath.cpp
src/scene/: Mesh.cpp  Model.cpp  Scene.cpp  Texture.cpp
src/shader/: Shader.cpp
src/testCases/: BlendingCase.cpp  OffScreenRenderCase.cpp  StencilTestingCase.cpp
src/tools/: TextureLoader.cpp  shaderLoader.cpp
src/utilities/: Clock.cpp
testcase/GLM/: BX_Transform.cpp  GLM_Transform.cpp  GLM_Transform.h  TestCase.cpp
